Fix: fix spacing

--- a/styles/partials/footer.scss
+++ b/styles/partials/footer.scss
@@ -6,7 +6,7 @@ footer {
   }
 
   .footer-social {
-    @apply flex gap-x-2;
+    @apply my-1 flex gap-x-2;
 
     a {
       @apply px-1 py-0.5 text-lg text-slate-700 hover:text-slate-500;
@@ -17,14 +17,14 @@ footer {
     }
   }
   .footer-separator {
-    @apply my-0.5 inline-block h-0.5 w-28 rounded-full bg-slate-400/60;
+    @apply my-1.5 inline-block h-0.5 w-28 rounded-full bg-slate-400/60;
   }
 
   .footer-link {
-    @apply flex gap-2;
+    @apply my-1 flex gap-2;
 
     a {
-      @apply my-1 text-sm text-slate-700 hover:text-slate-400;
+      @apply text-sm text-slate-700 hover:text-slate-400;
     }
   }
 
